# bioDB

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.cpu  Dockerfile.gpu  LICENSE  ONBOARDING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  docs.yml
docs/: api.rst  conf.py  gtr.md  index.md  ols.md  quickstart.md
docs/superpowers/plans/: 2026-06-11-gtr-integration.md  2026-07-15-opentargets-variants-readers.md
docs/superpowers/specs/: 2026-06-11-gtr-integration-design.md
docs/team-updates/: 2026-05-18-update.md
src/biodb/: __init__.py  _celltype.py  _downloads.py  aou_allxall.py  cellmarker.py  celltaxonomy.py  cellxgene.py  cellxgene_dataset.py  clinvar.py  gencode.py  gprofiler.py  gtr.py  gwas_atlas.py  harmonizome.py  hf_datasets.py  mapping.py  markers.py  monarch.py  msigdb.py  ols.py  omicspred.py  ontology.py  ontology_owl.py  opentargets.py  opentargets_graphql.py  pubmed.py  snomed.py  string.py  transform.py  uniprot.py  utils.py
src/biodb/opentargets/: __init__.py  studies.py  variants.py
src/phenoref/: __init__.py  gene_weighting.py  monarch.py  ontology.py  opentargets.py  utils.py
tests/: conftest.py  test_aou_allxall.py  test_cellmarker.py  test_celltaxonomy.py  test_cellxgene.py  test_clinvar.py  test_coverage_gaps.py  test_downloads.py  test_gencode.py  test_gene_weighting.py  test_gprofiler.py  test_gtr.py  test_gwas_atlas.py  test_harmonizome.py  test_hf_datasets.py  test_mapping.py  test_markers.py  test_monarch.py  test_msigdb.py  test_ols.py  test_omicspred.py  test_ontology.py  test_ontology_owl.py  test_opentargets.py  test_opentargets_graphql.py  test_opentargets_package.py  test_opentargets_studies.py  test_opentargets_variants.py  test_pubmed.py  test_snomed.py  test_source_api_modes.py  test_string.py  test_transform.py  test_uniprot.py  test_utils.py
tests/fixtures/cellmarker/: Cell_marker_All.xlsx
tests/fixtures/celltaxonomy/: Cell_Taxonomy_resource.txt
tests/fixtures/gtr/: esummary.json  gtr_sample.xml  test_condition_gene.txt
tutorials/: 01_utils_quickstart.ipynb  01_utils_quickstart.py  02_clinvar_simplify.ipynb  02_clinvar_simplify.py  02_opentargets.ipynb  03_monarch.ipynb  03_ontology_expand.ipynb  03_ontology_expand.py  04_ontology.ipynb  04_opentargets_markdown.ipynb  04_opentargets_markdown.py  05_uniprot.ipynb  06_harmonizome.ipynb  07_clinvar.ipynb  08_gwas_atlas.ipynb  09_gprofiler.ipynb  10_msigdb.ipynb  11_pubmed.ipynb  12_snomed.ipynb  README.md
